tarpc/tests/compile_fail/serde1/deprecated.rs
#![deny(warnings)]

#[tarpc::service(derive_serde = true)]
trait Foo {
    async fn foo();
}

fn main() {}
